# multi-view-ssl-benchmark

./: .gitignore  README.md  pyproject.toml
ssl_framework/: constants.py  selfsupervised_losses.py  selfsupervised_models.py
ssl_framework/downstream_tasks/: model.py
ssl_framework/downstream_tasks/datasets/: __init__.py  jamendo.py  mtat.py
ssl_framework/evaluation/: metrics.py
ssl_framework/models/: __init__.py  resnet.py  utils.py
ssl_framework/utils/: downstream.py  gin.py  parallel.py  scheduler.py
usage/: sample.py
